<resources>
    <string name="app_name">English Vocabulary Quiz Game</string>
    <string name="text_instruction">Instruction</string>
    <string name="text_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_play">Play Now</string>
    <string name="text_settings">Settings</string>
    <string name="text_exit">Exit</string>
    <string name="text_high_score">High Score</string>
    <string name="text_correct">Correct!</string>
    <string name="text_wrong">Wrong!</string>
    <string name="text_quiz_image_content_description">Vocabulary Image</string>
    <string name="text_is_the_word_correct">Is the word correct?</string>
    <string name="api_image_url">http://api.ocodereducation.com/image/picvoc/</string>
    <string name="difficulty_key">difficulty</string>
    <string name="difficulty">Game Difficulty</string>
    <string name="hard">hard</string>
    <string name="medium">medium</string>
    <string name="easy">easy</string>
    <string name="primaryColor">#ff9e80</string>
    <string name="text_home_screen">Home</string>
    <string name="text_try_again">Try Again</string>
    <string name="text_share">Share</string>
    <string name="text_rate_me">Rate Us</string>
    <string name="text_your_score">Your Score</string>
    <string name="your_score_rate_content_description">Your Score Rate</string>
    <string name="your_score_is">Score: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="shared_preferences_key">dev.tsnanh.englishvocabularyquizgame</string>
    <string name="player_name_key">player_name</string>
    <string name="ui_settings_key">ui_settings</string>
    <string name="item_high_score_description">Player: <b>%s</b>. Time: %s</string>
    <string name="date_format_pattern">EEE MMM dd HH:mm:ss yyyy</string>
    <string name="text_learn_vocabulary">Learn Vocabulary</string>
</resources>
