<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="playHistory"
            type="dev.tsnanh.englishvocabularyquizgame.database.PlayHistory" />

        <variable
            name="viewModel"
            type="dev.tsnanh.englishvocabularyquizgame.ui.result.ResultViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/your_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_your_score"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/score"
                app:layout_constraintEnd_toEndOf="@+id/score"
                app:layout_constraintStart_toStartOf="@+id/score"
                app:layout_constraintTop_toBottomOf="@+id/share_button"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Your Score" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#4CAF50"
                android:onClick="@{ () -> viewModel.onHomeClick() }"
                android:text="@string/text_home_screen"
                android:textAlignment="center"
                app:icon="@drawable/ic_home_black_24dp"
                app:iconGravity="start"
                app:layout_constraintBottom_toTopOf="@+id/tryAgainButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/tryAgainButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{ () -> viewModel.onTryAgainClick() }"
                android:text="@string/text_try_again"
                android:textAlignment="center"
                app:backgroundTint="#FFCA28"
                app:icon="@drawable/ic_refresh_black_24dp"
                app:iconGravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/time"
                app:layout_constraintEnd_toEndOf="@+id/time"
                app:layout_constraintStart_toStartOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/your_score"
                app:textScoreResult="@{ playHistory }"
                tools:text="100" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{ () -> viewModel.onShareClick() }"
                android:text="@string/text_share"
                app:icon="@drawable/ic_share_black_24dp"
                app:layout_constraintEnd_toStartOf="@+id/score_rating"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{ () -> viewModel.onRateClick() }"
                android:text="@string/text_rate_me"
                app:icon="@drawable/ic_stars_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/score_rating"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintBottom_toTopOf="@+id/homeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score"
                app:textTimeResult="@{ playHistory }"
                tools:text="Mon 07/02/2020" />

            <ImageView
                android:id="@+id/score_rating"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/your_score_rate_content_description"
                android:tint="@color/primaryColor"
                app:imageScoreRating="@{ playHistory }"
                app:layout_constraintBottom_toBottomOf="@+id/share_button"
                app:layout_constraintEnd_toStartOf="@+id/rate_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/share_button"
                app:layout_constraintTop_toTopOf="@+id/rate_button"
                tools:srcCompat="@drawable/ic_sentiment_very_satisfied_black_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>