<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.welcome.WelcomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_high_score"
            app:destination="@id/navigation_high_score"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/pop_slide_in"
            app:popExitAnim="@anim/pop_slide_out" />
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_play"
            app:destination="@id/navigation_play"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/pop_slide_in"
            app:popExitAnim="@anim/pop_slide_out"
            app:popUpTo="@+id/navigation_welcome" />
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/pop_slide_in"
            app:popExitAnim="@anim/pop_slide_out" />
        <action
            android:id="@+id/action_navigation_welcome_to_navigation_category"
            app:destination="@id/navigation_category" />
    </fragment>
    <fragment
        android:id="@+id/navigation_about"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.about.AboutFragment"
        android:label="@string/text_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/navigation_instruction"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.instruction.InstructionFragment"
        android:label="@string/text_instruction"
        tools:layout="@layout/fragment_instruction" />
    <fragment
        android:id="@+id/navigation_high_score"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.high_score.HighScoreFragment"
        android:label="High Score"
        tools:layout="@layout/fragment_high_score" />
    <fragment
        android:id="@+id/navigation_play"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.play.PlayFragment"
        android:label="@string/text_play"
        tools:layout="@layout/fragment_play">
        <action
            android:id="@+id/action_navigation_play_to_navigation_result"
            app:destination="@id/navigation_result"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/pop_slide_in"
            app:popExitAnim="@anim/pop_slide_out"
            app:popUpTo="@+id/navigation_welcome" />
    </fragment>
    <fragment
        android:id="@+id/navigation_result"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.result.ResultFragment"
        android:label="Your Result"
        tools:layout="@layout/fragment_result" >
        <argument
            android:name="playHistory"
            app:argType="dev.tsnanh.englishvocabularyquizgame.database.PlayHistory" />
        <action
            android:id="@+id/action_navigation_result_to_navigation_play"
            app:destination="@id/navigation_play"
            app:enterAnim="@anim/pop_slide_in"
            app:exitAnim="@anim/pop_slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.settings.SettingsFragment"
        android:label="Settings" />
    <fragment
        android:id="@+id/navigation_category"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.category.CategoryFragment">
        <action
            android:id="@+id/action_navigation_category_to_navigation_list_vocabulary"
            app:destination="@id/navigation_list_vocabulary"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/pop_slide_in"
            app:popExitAnim="@anim/pop_slide_out" />
    </fragment>
    <fragment
        android:id="@+id/navigation_list_vocabulary"
        android:name="dev.tsnanh.englishvocabularyquizgame.ui.list_vocabulary.ListVocabularyFragment">
        <argument
            android:name="vocabularyID"
            app:argType="long" />
        <argument
            android:name="imageURI"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>